--- a/kompartiment-nord-01.html
+++ b/kompartiment-nord-01.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chorgestühl Test: Kompartiment 9</title>
+    <title>Chorgestühl Nord - Kompartiment 1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,19 +26,19 @@
             </a>
 
             <a class="relief-rahmen hochformat" target="_blank"
-                 href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-28_2.tif/lossy-page1-3900px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-28_2.tif.jpg">
+                 href="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-20_2.tif/lossy-page1-3900px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-20_2.tif.jpg">
                  
                 <img class="relief-thumbnail" 
-                     src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-28_2.tif/200px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-28_2.tif.jpg" 
+                     src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-20_2.tif/lossy-page1-200px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-20_2.tif.jpg" 
                      alt="Thumbnail: Mariä Verkündigung">
                 <span class="relief-titel-text">Mariä Verkündigung</span>
             </a>
 
             <a class="relief-rahmen querformat" target="_blank"
-                 href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-28_3.tif/lossy-page1-5400px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-28_3.tif.jpg">
+                 href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-20_3.tif/lossy-page1-5400px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-20_3.tif.jpg">
                  
                 <img class="relief-thumbnail" 
-                     src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-28_3.tif/200px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-28_3.tif.jpg" 
+                     src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-20_3.tif/lossy-page1-200px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-20_3.tif.jpg" 
                      alt="Thumbnail: Das Paradies">
                 <span class="relief-titel-text">Das Paradies</span>
             </a>
