--- a/kompartiment-nord-02.html
+++ b/kompartiment-nord-02.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chorgestühl Nord - Kompartiment 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,70 +14,59 @@
 
     <div id="kompartiment-container">
         <div class="kompartiment-a4-quer">
-            <p><a href="nord.html">← Zurück zur Nordflügel-Übersicht</a></p>
+            <p style="margin-bottom: 20px;"><a href="nord.html">← Zurück zur Nordflügel-Übersicht</a></p>
 
             <div class="kompartiment-grid">
                 
-                <div class="grid-box grid-titel-bereich">
-                    <h2>Kompartiment 2: Titel</h2>
-                    <p>Hier steht die Gebrauchsanweisung.</p>
+                <div class="grid-box grid-titel-anweisung-links">
+                    <div class="text-box-inner" style="min-height: 50%; border: 2px solid #4e342e;"> <h2>Titel und Gebrauchsanweisung</h2>
+                        <p>Hier steht der Haupttitel des Kompartiments und die Gebrauchsanweisung. Dieser Text ist vertikal zentriert und neben das mittlere Relief platziert.</p>
+                    </div>
                 </div>
 
-                <div class="grid-box grid-text-links-oben">
-                    <h3>Text Oben Links (Platzhalter)</h3>
-                    <p>Relieftitel: [Relieftitel hier einfügen]</p>
-                    <p>Hier steht der erklärende Text und Links zu Erläuterungen.</p>
-                </div>
                 <div class="grid-box grid-relief-oben">
                     <a class="relief-rahmen-grid" target="_blank"
                          href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_1.tif/lossy-page1-5400px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_1.tif.jpg">
                         <img class="relief-thumbnail-grid" 
                              src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_1.tif/lossy-page1-300px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_1.tif.jpg" 
                              alt="Thumbnail Relief Oben">
-                        <span class="relief-titel-text-grid"></span> 
                     </a>
                 </div>
                 <div class="grid-box grid-text-rechts-oben">
-                    <h3>Text Oben Rechts (Platzhalter)</h3>
-                    <p>Hier steht der erklärende Text und Links zu Erläuterungen.</p>
+                    <div class="text-box-inner">
+                        <h3>Text Oben und verlinkte Erläuterungen</h3>
+                        <p>Hier steht der erklärende Text für das obere Relief und Links zu Erläuterungen.</p>
+                    </div>
                 </div>
 
-                <div class="grid-box grid-text-links-mitte">
-                    <h3>Text Mitte Links (Platzhalter)</h3>
-                    <p>Relieftitel: [Relieftitel hier einfügen]</p>
-                    <p>Hier steht der erklärende Text und Links zu Erläuterungen.</p>
-                </div>
                 <div class="grid-box grid-relief-mitte">
                     <a class="relief-rahmen-grid" target="_blank"
                          href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_2.tif/lossy-page1-3900px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_2.tif.jpg">
                         <img class="relief-thumbnail-grid" 
                              src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_2.tif/lossy-page1-300px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_2.tif.jpg" 
                              alt="Thumbnail Relief Mitte">
-                        <span class="relief-titel-text-grid"></span>
                     </a>
                 </div>
                 <div class="grid-box grid-text-rechts-mitte">
-                    <h3>Text Mitte Rechts (Platzhalter)</h3>
-                    <p>Hier steht der erklärende Text und Links zu Erläuterungen.</p>
+                    <div class="text-box-inner">
+                        <h3>Text Mitte und verlinkte Erläuterungen</h3>
+                        <p>Hier steht der erklärende Text für das mittlere Relief und Links zu Erläuterungen.</p>
+                    </div>
                 </div>
 
-                <div class="grid-box grid-text-links-unten">
-                    <h3>Text Unten Links (Platzhalter)</h3>
-                    <p>Relieftitel: [Relieftitel hier einfügen]</p>
-                    <p>Hier steht der erklärende Text und Links zu Erläuterungen.</p>
-                </div>
                 <div class="grid-box grid-relief-unten">
                     <a class="relief-rahmen-grid" target="_blank"
                          href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_3.tif/lossy-page1-5400px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_3.tif.jpg">
                         <img class="relief-thumbnail-grid" 
                              src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_3.tif/lossy-page1-300px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_3.tif.jpg" 
                              alt="Thumbnail Relief Unten">
-                        <span class="relief-titel-text-grid"></span>
                     </a>
                 </div>
                 <div class="grid-box grid-text-rechts-unten">
-                    <h3>Text Unten Rechts (Platzhalter)</h3>
-                    <p>Hier steht der erklärende Text und Links zu Erläuterungen.</p>
+                    <div class="text-box-inner">
+                        <h3>Text Unten und verlinkte Erläuterungen</h3>
+                        <p>Hier steht der erklärende Text für das untere Relief und Links zu Erläuterungen.</p>
+                    </div>
                 </div>
             </div>
         </div>
