--- a/kompartiment-nord-02.html
+++ b/kompartiment-nord-02.html
@@ -14,12 +14,13 @@
 
     <div id="kompartiment-container">
         <div class="kompartiment-a4-quer">
-            <p style="margin-bottom: 20px;"><a href="nord.html">← Zurück zur Nordflügel-Übersicht</a></p>
+            <p class="zurueck-button"><a href="nord.html">← Zurück zur Nordflügel-Übersicht</a></p>
 
             <div class="kompartiment-grid">
                 
                 <div class="grid-box grid-titel-anweisung-links">
-                    <div class="text-box-inner" style="min-height: 50%; border: 2px solid #4e342e;"> <h2>Titel und Gebrauchsanweisung</h2>
+                    <div class="text-box-inner" style="border: 2px solid #4e342e;"> 
+                        <h2>Titel und Gebrauchsanweisung</h2>
                         <p>Hier steht der Haupttitel des Kompartiments und die Gebrauchsanweisung. Dieser Text ist vertikal zentriert und neben das mittlere Relief platziert.</p>
                     </div>
                 </div>
