--- a/kompartiment-nord-02.html
+++ b/kompartiment-nord-02.html
@@ -14,7 +14,7 @@
 
     <div id="kompartiment-container">
         <div class="kompartiment-a4-quer">
-            <p class="zurueck-button"><a href="nord.html">← Zurück zur Nordflügel-Übersicht</a></p>
+            <div class="zurueck-button"><a href="nord.html">← Zurück zur Nordflügel-Übersicht</a></div>
 
             <div class="kompartiment-grid">
                 
