--- a/kompartiment-nord-02.html
+++ b/kompartiment-nord-02.html
@@ -20,8 +20,10 @@
                 
                 <div class="grid-box grid-titel-anweisung-links">
                     <div class="text-box-inner" style="border: 2px solid #4e342e;"> 
-                        <h2>Titel und Gebrauchsanweisung</h2>
-                        <p>Hier steht der Haupttitel des Kompartiments und die Gebrauchsanweisung. Dieser Text ist vertikal zentriert und neben das mittlere Relief platziert.</p>
+                        <h3>Gebrauchsanleitung</h3>
+                        <p>Vergrösserung: Bild anklicken oder antippen. Die grosse Foto lässt sich bis zur Wurmloch-Dimension vergrössern. Zurück zur Übersicht des Kompartiments: Löschen des Reiters/Tabulators bzw. mit «Zurück-Pfeil».</p>
+                        
+                        <p><strong>Ausführliche Anleitung:</strong> <a href="Gebrauchsanleitung.docx" target="_blank">Gebrauchsanleitung.docx</a></p>
                     </div>
                 </div>
 
