--- a/kompartiment-nord-02.html
+++ b/kompartiment-nord-02.html
@@ -32,13 +32,14 @@
                          href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_1.tif/lossy-page1-5400px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_1.tif.jpg">
                         <img class="relief-thumbnail-grid" 
                              src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_1.tif/lossy-page1-300px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_1.tif.jpg" 
-                             alt="Thumbnail Relief Oben">
+                             alt="Thumbnail Relief Oben: Der Hauptmann zu Capernaum">
                     </a>
                 </div>
                 <div class="grid-box grid-text-rechts-oben">
                     <div class="text-box-inner">
-                        <h3>Text Oben und verlinkte Erläuterungen</h3>
-                        <p>Hier steht der erklärende Text für das obere Relief und Links zu Erläuterungen.</p>
+                        <h3>Der Hauptmann zu Capernaum</h3>
+                        <p>Erläuterung: Der Hauptmann bittet Jesus, seinen kranken Knecht zu heilen. Dies ist eine bekannte Szene, die für ihre Betonung des Glaubens wichtig ist.</p>
+                        <p><strong>→ Mehr dazu:</strong> [Link zum Hauptmann von Kapernaum]</p>
                     </div>
                 </div>
 
@@ -47,13 +48,14 @@
                          href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_2.tif/lossy-page1-3900px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_2.tif.jpg">
                         <img class="relief-thumbnail-grid" 
                              src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_2.tif/lossy-page1-300px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_2.tif.jpg" 
-                             alt="Thumbnail Relief Mitte">
+                             alt="Thumbnail Relief Mitte: Noah steigt in die Arche">
                     </a>
                 </div>
                 <div class="grid-box grid-text-rechts-mitte">
                     <div class="text-box-inner">
-                        <h3>Text Mitte und verlinkte Erläuterungen</h3>
-                        <p>Hier steht der erklärende Text für das mittlere Relief und Links zu Erläuterungen.</p>
+                        <h3>Noah steigt in die Arche</h3>
+                        <p>Erläuterung: Darstellung des Gehorsams und des Beginns der Rettung. Das Relief zeigt Noah, wie er mit seiner Familie und den Tieren in die Arche geht, um die Sintflut zu überleben.</p>
+                        <p><strong>→ Mehr dazu:</strong> [Link zu Noah und der Arche]</p>
                     </div>
                 </div>
 
@@ -62,19 +64,18 @@
                          href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_3.tif/lossy-page1-5400px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_3.tif.jpg">
                         <img class="relief-thumbnail-grid" 
                              src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_3.tif/lossy-page1-300px-CH-NB_Saint_Urban%27s_Abbey_EAD-DRESS-21_3.tif.jpg" 
-                             alt="Thumbnail Relief Unten">
+                             alt="Thumbnail Relief Unten: Der Einzug Jesu in Jerusalem">
                     </a>
                 </div>
                 <div class="grid-box grid-text-rechts-unten">
                     <div class="text-box-inner">
-                        <h3>Text Unten und verlinkte Erläuterungen</h3>
-                        <p>Hier steht der erklärende Text für das untere Relief und Links zu Erläuterungen.</p>
+                        <h3>Der Einzug Jesu in Jerusalem</h3>
+                        <p>Erläuterung: Die Darstellung der festlichen Ankunft Jesu, bekannt als Palmsonntag. Dieses Relief zeigt den Beginn der Passion und ist ein wichtiges Element der Ostergeschichte.</p>
+                        <p><strong>→ Mehr dazu:</strong> [Link zum Einzug in Jerusalem]</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</body>
-</html>
 </body>
 </html>
